# BetterRaytracer

./: .gitignore  Dockerfile  README.md  better_raytracer.def  callgrind.out.29771  colour_data.ini  compile_commands.json  get_dependencies.sh  meson.build  object_config.ini  report.txt  run.sh  scene_config.ini  script.sh  valgrind.sh
.cache/clangd/index/: Screen.cc.E2729581C9D90138.idx  Screen.hh.A13504E49D1522A6.idx  WindowData.hh.67DC9E6DC64440E0.idx  main.cpp.BCBD1E2357433761.idx
compile-scripts/: debugoptimized.sh  release.sh
instructions/: colour_config.md  ini_values.md  object_config.md  preview_tool.md  scene_config.md
run-scripts/: release.sh
src/: SceneConfig.cc  SceneConfig.hh  main.cpp  main_routines.cc  main_routines.hh  meson.build  rasteriser.cc  rasteriser.hh  raytracer.cc  raytracer.hh
src/bmp_writer/: bmp.cc
src/camera/: camera.cc  camera.hh
src/colour/: colour.cc  colour.hh
src/geometry/: geometry_menu.cc  geometry_menu.hh  geometry_variant.cc  geometry_variant.hh  shape.hh  sphere.cc  sphere.hh  triangle.cc  triangle.hh
src/image/: image.cc  image.hh
src/image/multi_threaded/: image.cc
src/image/scene_objects/: scene_objects.cc  scene_objects.hh
src/image/sycl_implementation/: sycl_impl.cc  sycl_impl.hh
src/pod_types/: pod_iota.hh  pod_vector.hh
src/raylogic/: raylogic.cc  raylogic.hh  vector_from_angle.md
src/readers/: file_reader.cc  file_reader.hh
src/readers/object_config/: ColourReader.cc  ColourReader.hh  ObjectConfig.cc  ObjectConfig.hh
src/readers/scene_config/: ConfigReader.cc  ConfigReader.hh
src/scene/: SceneConfig.cc  SceneConfig.hh
src/scene/scene_objects/: scene_objects.cc  scene_objects.hh
src/timer/: timer.hh
src/vectors/: vector.hh  vector_advanced.cc  vector_advanced.hh  vector_definitions.hh  vector_methods.cc  vector_methods.hh  vector_overloads.hh  vectors_advanced.cc  vectors_advanced.hh
src/window/: Screen.cc  Screen.hh  WindowData.hh  screen.cc  screen.hh
src/window/multi_threaded/: screen.cc
src/window/raytracer/: raytracer.cc  raytracer.hh
src/window/scene_objects/: scene_objects.cc  scene_objects.hh
src/window/screen_types/: screen_nogpu.cc  screen_sfml.cc
tests/: meson.build  vectors.cc
tests/geometry/: sphere.cc  triangle.cc
tests/vectors/: vector_advanced.cc  vector_dot_and_cross.cc  vector_methods.cc  vector_overloads.cc
